--- a/BigOnSolution/BigOn.WebUI/appsettings.json
+++ b/BigOnSolution/BigOn.WebUI/appsettings.json
@@ -17,5 +17,10 @@
     "userName": "bigon.web@mail.ru",
     "password": "zcAQUsdNQUQKQALMn9pc",
     "cc": ""
+  },
+  "defaultAccount": {
+    "superAdmin": "sa",
+    "email": "samidms@code.edu.az",
+    "password" : "123"
   }
 }
