--- a/BigOnSolution/BigOn.WebUI/appsettings.json
+++ b/BigOnSolution/BigOn.WebUI/appsettings.json
@@ -20,6 +20,7 @@
   },
   "defaultAccount": {
     "superAdmin": "sa",
+    "userName": "samid",
     "email": "samidms@code.edu.az",
     "password" : "123"
   }
