somethings about blogposts

--- a/BigOnSolution/BigOn.WebUI/appsettings.json
+++ b/BigOnSolution/BigOn.WebUI/appsettings.json
@@ -14,6 +14,7 @@
     "displayName": "BigOn E-commerce Info Services",
     "smtpServer": "smtp.mail.ru",
     "smtpPort": 25,
+    "enableSsl": true,
     "userName": "bigon.web@mail.ru",
     "password": "zcAQUsdNQUQKQALMn9pc",
     "cc": ""
@@ -22,6 +23,10 @@
     "superAdmin": "sa",
     "userName": "samid",
     "email": "samidms@code.edu.az",
-    "password" : "123"
+    "password": "123"
+  },
+  "cryptograpy": {
+    "saltKey": "!P513codeacademy",
+    "symmetricKey": "development-p513-code academy"
   }
 }
